# photo-syn

./: Dockerfile  LICENSE  README.md  pyproject.toml
memories/: auto_album.py  connection.py  utils.py
memories/.ipynb_checkpoints/: connection-checkpoint.py
scripts/: build_images.sh  deploy_hourly_albums.py  deploy_people_albums.py  deploy_souvenirs.py  run_container.sh  souvenirs.sh  stop_container.sh
tests/: test_auto_album.ipynb
tests/.ipynb_checkpoints/: test_auto_album-checkpoint.ipynb
